# sBotics-file-modulator

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
example/: .your-env
example/output/: transpiled.cs
example/source/: file1.cs  main.cs
example/source/subfolder/: file_subfolder.cs
release/: transpiled.cs
src/: main.rs
