[package]
name = "sbotics-file-modulator"
version = "0.1.0"
description = "File modulator for sBotics"
authors = ["Vinicios Lugli <vinicioslugli@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
notify = "4.0.17"
ansi_term = "0.12.1"
chrono = "0.4.19"