[package]
name = "sbotics-file-modulator"
version = "0.1.0"
description = "File modulator for sBotics"
authors = ["Vinicios Lugli <vinicioslugli@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1.5.5"
lazy_static = "1.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
notify = "4.0.17"
colored = "2"
chrono = "0.4.19"

[profile.release]
opt-level = "z"
codegen-units = 1